[gd_scene load_steps=3 format=2]

[ext_resource path="res://prefabs/ui_resources/fonts/main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/name_selector/name_selector.gd" type="Script" id=2]

[node name="name_selector" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 180.0
margin_bottom = 320.0
alignment = 1

[node name="letter_1" type="Label" parent="HBoxContainer"]
margin_left = 72.0
margin_top = 155.0
margin_right = 81.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 1 )
text = "A"
align = 1
valign = 1

[node name="letter_2" type="Label" parent="HBoxContainer"]
margin_left = 85.0
margin_top = 155.0
margin_right = 94.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 1 )
text = "A"
align = 1
valign = 1

[node name="letter_3" type="Label" parent="HBoxContainer"]
margin_left = 98.0
margin_top = 155.0
margin_right = 107.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 1 )
text = "A"
align = 1
valign = 1

[node name="timer_blink_letter" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="timeout" from="timer_blink_letter" to="." method="_on_timer_blink_letter_timeout"]
